Remove Support Spigot